; ModuleID = '/home/carl/AnghaBench/openssl/crypto/evp/extr_e_chacha20_poly1305.c_chacha20_poly1305_cleanup.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/evp/extr_e_chacha20_poly1305.c_chacha20_poly1305_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @chacha20_poly1305_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chacha20_poly1305_cleanup(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = call i32* @aead_data(%struct.TYPE_4__* %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 (...) @Poly1305_ctx_size()
  %13 = add i64 4, %12
  %14 = call i32 @OPENSSL_cleanse(i32 %11, i64 %13)
  br label %15

15:                                               ; preds = %8, %1
  ret i32 1
}

declare dso_local i32* @aead_data(%struct.TYPE_4__*) #1

declare dso_local i32 @OPENSSL_cleanse(i32, i64) #1

declare dso_local i64 @Poly1305_ctx_size(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
